# ChatGPT-LineBot

./: .env  .gitignore  README.md  Spacefile  example-env  main.py  pyproject.toml  readme.md  requirements.txt
libs/: __init__.py
libs/app/API/line_bot/: linebot_router.py
libs/chatbot/: __init__.py  chatbot_obj.py  chatbot_router.py
libs/configs/: __init__.py  logger.py  settings.py
libs/enumeration/: __init__.py  start_event_enum.py
libs/logger/: access_logger_handle.py  info_logger_handle.py  logger_format.py
libs/openAI/: __init__.py  openai_obj.py
libs/service/: __init__.py  debugging_argparse.py  pinews_argparse.py  web_service.py
